# -variant-flow-mmr

./: .gitignore  CURSO_ETAPA_3_PARTE_2_COMPLETO.md  ETAPA_4_FINAL.md  ETAPA_8_SETUP.md  GUIA_COMANDO_1_vs_2.md  HANDOFF_ETAPA9.md  MODELO_APRENDIZAGEM.md  PROMPT_PADRAO.md  README.md  VARIANTFLOW_RESUMO_ETAPA_3_PARTE_2.md  logging_config.py  pyproject.toml  requirements-etapa6.txt  requirements.txt  setup.py
audit_logs/2026-06-18/: audit_001.json  audit_002.json
examples/: sample_lynch.vcf
src/vflow/: __init__.py  __version__.py  analyzer.py  vcf_parser.py
src/vflow/cli/: main.py  main.py.v1
src/vflow/core/: acmg_evidence.py  audit.py  coverage.py  models.py  pms2_assessment.py
src/vflow/pipeline/: aggregator.py  integrator.py
src/vflow/reports/: html_reporter.py  visualizations.py
src/vflow/validators/: quality_gates.py
tests/: test_cli.py  test_etapa6.py  test_reporters.py
tests/unit/: test_acmg.py  test_audit.py  test_etapa7.py  test_etapa8.py  test_models.py  test_pms2.py
