[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "variant-flow-mmr"
version = "0.1.0"
description = "Clinical-grade QC tool for Lynch Syndrome MMR genes"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Carla Rodrigues", email = "Carlabio.biomol@gmail.com"}
]
dependencies = [
    "pandas>=2.0.3",
    "numpy>=1.24.3",
    "biopython>=1.81",
    "pysam>=0.21.0",
    "typer>=0.9.0",
    "jinja2>=3.1.2",
    "requests>=2.31.0",
    "pyyaml>=6.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.0.292",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/carla-bioinfo/variant-flow-mmr"
Documentation = "https://github.com/carla-bioinfo/variant-flow-mmr/tree/main/docs"
Repository = "https://github.com/carla-bioinfo/variant-flow-mmr.git"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[project.scripts]
vflow = "vflow.cli.main:app"
